Performance tweaks per lint